[project]
name = "bebraland-backend"
version = "0.1.0"
description = "BebraLand launcher backend: modpack builder, manifest host, auth API."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
bebraland-backend = "bebraland_backend.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
